# peakbag

./: .travis.yml  Cargo.toml  README.md  deploy-docs.sh  index.html  search-index.js
implementors/core/clone/: trait.Clone.js
implementors/core/cmp/: trait.Eq.js  trait.Ord.js  trait.PartialEq.js  trait.PartialOrd.js
implementors/core/default/: trait.Default.js
implementors/core/fmt/: trait.Debug.js  trait.Display.js
implementors/core/hash/: trait.Hash.js
implementors/core/iter/: trait.Iterator.js
implementors/core/marker/: trait.Copy.js
implementors/core/ops/: trait.Sub.js
implementors/std/error/: trait.Error.js
num/iter/: struct.Range.html  struct.RangeInclusive.html  struct.RangeStep.html  struct.RangeStepInclusive.html
peakbag/: fn.detect_peaks.html  index.html  sidebar-items.js  struct.Peak.html  struct.PeakDetector.html
rand/: struct.AsciiGenerator.html  struct.Generator.html
rustc_serialize/json/: struct.Parser.html
src/: lib.rs
src/peakbag/: lib.rs.html
